[gd_scene load_steps=9 format=2]

[ext_resource path="res://Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/enemy_texturet.png" type="Texture" id=2]
[ext_resource path="res://Enemy/script/chaser_component.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.00001
height = 3.99999

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Death Partical:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_energy_drop"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Death Partical:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 7.0

[node name="Chaser" instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 9
mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]
rotation = 1.57079
shape = SubResource( 1 )

[node name="ChaserComponent" type="Node2D" parent="." index="1"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="ChaserComponent" index="0"]
visible = false
texture = ExtResource( 2 )

[node name="Death Partical" type="CPUParticles2D" parent="ChaserComponent" index="1"]
emitting = false
amount = 21
one_shot = true
explosiveness = 1.0
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 40.54
initial_velocity_random = 0.57
angular_velocity = 38.92
damping = 40.54
angle = 272.4
angle_random = 0.3
scale_amount = 2.0
scale_amount_random = 0.61
color = Color( 1, 0.117647, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ChaserComponent" index="2"]
autoplay = "idle"
anims/RESET = SubResource( 5 )
anims/death = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="AttackArea" type="Area2D" parent="ChaserComponent" index="3"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaserComponent/AttackArea" index="0"]
shape = SubResource( 4 )

[node name="DamageCooldownTimer" type="Timer" parent="ChaserComponent/AttackArea" index="1"]
wait_time = 0.67
one_shot = true

[connection signal="body_entered" from="ChaserComponent/AttackArea" to="ChaserComponent" method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="ChaserComponent/AttackArea" to="ChaserComponent" method="_on_AttackArea_body_exited"]
[connection signal="timeout" from="ChaserComponent/AttackArea/DamageCooldownTimer" to="ChaserComponent" method="_on_DamageCooldownTimer_timeout"]
